changed submit lyrics option, updated clock, updated rules page date, and fixed mobile navbar overlap

--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -546,7 +546,7 @@ and (max-width : 409px)
   /*---------Carasouel Beginning------*/
 
   /*--------Nav Bar Collapse Begin---------*/
-  @media (max-width: 1300px) {
+  @media (max-width: 1150px) {
   .navbar-header {
       float: none;
   }
